--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +8,7 @@
 <body>
   <header>
     <h1>Заголовок сайта</h1>
+    <h2>Текст</h2>
   </header>
 </body>
 </html>
